<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">pro weather app</string>
    <string name="demo"> todayWeather </string>
    <string name="test">test</string>

    <string name="feels_like">Feels like</string>
    <string name="today">Today</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="pressure">pressure</string>
    <string name="title_today">Today</string>
    <string name="title_weekly">Weekly</string>
    <string name="title_share">Share</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="DayweatherForecast">5 Day weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u2103</string>-->
    <!--    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>-->
    <!--    <string name="tomorrow">Tomorrow</string>-->
    <!--    <string name="format_wind_kmh"> <xliff:g id="speed">%1$1.0f</xliff:g> km/h</string>-->

</resources>